[package]
name = "falcon"
version = "0.3.2"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
csv = "1.3.1"
meval = "0.2.0"
nu-ansi-term = "0.50.1"
ryu = "1.0.20"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.21"

[profile.release]
opt-level = "s"
lto = true
strip = "symbols"
codegen-units = 1
