[package]
name = "falcon"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
csv = "1.4.0"
meval = "0.2.0"
nu-ansi-term = "0.50.3"
ryu = "1.0.23"
serde = { version = "1.0.228", features = ["derive"] }
toml = "^1"

[profile.release]
opt-level = "s"
lto = true
strip = "symbols"
codegen-units = 1
